# esperion-agency-web

./: .ai-context.md  .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  ESPERION_VERSIONS.md  IMAGE_REQUIREMENTS.md  MIGRATION_COMPLETE_REPORT.md  MIGRATION_REPORT.md  MIGRATION_STATUS_SUMMARY.md  POST_MIGRATION_CHECKLIST.md  PRODUCTION_MIGRATION_PLAN.md  README.md  backup_id.json  db-init.surql  design.md  docker-compose.frontend-only.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.backup  package-lock.json  package.json  research_log.txt  test-detail-pages.js
.clinememory/: esperion-context.md
.github/: pull_request_template.md
.nuxt/: nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json
.sisyphus/: FINAL-REPORT-2026-03-07.md  MASTER-PLAN-2026-03-07.md  PROGRESS-REPORT-2026-03-07-UPDATE-1.md  PROGRESS-REPORT-2026-03-07.md  PROGRESS-UPDATE-2026-03-07.md  RINGKASAN-LENGKAP-SEO-2026-03-07.md  SEO-MONITORING-SETUP.md  SEO-STRATEGY-2026-03-07.md  boulder.json
backend/: .dockerignore  .env.example  AGENTS.md  Cargo.toml  DOCKER_BUILD_OPTIMIZATION.md  Dockerfile  README.md  start-dev.sh
backend/.cargo/: config.toml
backend/scripts/: version-check.bat  version-check.sh
backend/src/: auth_tests.rs  errors.rs  lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/db/: mod.rs  schema.rs
backend/src/db/migrations/: 001_initial_schema.sql  001_initial_schema_down.sql  002_add_user_sessions.sql  002_add_user_sessions_down.sql  003_add_translation_memory_table.sql  003_add_translation_memory_table_down.sql  004_add_publication_options_to_articles.sql  004_add_publication_options_to_articles_down.sql  004_backup_history.sql  005_add_monitoring_alerting_tables.sql  005_add_monitoring_alerting_tables_down.sql  005_user_sessions.sql  006_add_analytics_funnels.sql  006_add_analytics_funnels_down.sql  006_translation_memory.sql  006_translation_memory_down.sql  007_add_backup_jobs.sql  007_add_backup_jobs_down.sql  007_migrations_tracking.sql  007_migrations_tracking_down.sql  008_email_system.sql  008_email_system_down.sql  integration_tests.rs  mod.rs
backend/src/handlers/: analytics.rs  analytics_advanced.rs  articles.rs  auth.rs  backup.rs  clients.rs  contact.rs  email.rs  email_management.rs  geo.rs  health.rs  media.rs  mod.rs  monitoring.rs  seo_score.rs  services.rs  translation.rs  user_management.rs  works.rs
backend/src/middleware/: mod.rs
backend/src/models/: analytics.rs  article.rs  backup.rs  client.rs  contact.rs  email.rs  email_log.rs  email_settings.rs  email_template.rs  media.rs  mod.rs  monitoring.rs  recaptcha.rs  seo_score.rs  service.rs  translation.rs  user.rs  work.rs
backend/src/routes/: mod.rs
backend/src/services/: analytics.rs  backup.rs  email.rs  image_processor.rs  image_processor_tests.rs  mod.rs  monitoring.rs  translation.rs
backend/src/services/alert/: mod.rs
backend/src/services/alerting/: discord.rs  email.rs  google_chat.rs  mod.rs  push.rs  telegram.rs
backend/src/services/backup/: backup.rs  encryption.rs  mod.rs  restore.rs  scheduler.rs
backend/src/services/monitoring/: sentry.rs
backend/tests/: email_service_test.rs  seo_score_test.rs
backups/: BACKUP_REPORT.md  MIGRATION_TEST_REPORT.md  esperion-full-backup.surql  staging-v1.5-export-clean.surql  staging-v1.5-export.surql
docs/: BILINGUAL_STRATEGY.md  DEPENDENCY_VERIFICATION.md
frontend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  README.md  app.config.ts  bun.lock.backup  check-devtools.js  check-final.js  debug-contact.js  debug-contact2.js  debug-contact3.js  debug-full.js  debug-nuxt-error.js  debug-page.js  debug-page2.js  docker-entrypoint.sh  eslint.config.ts  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  screenshot-contact.js  screenshot-contact2.js  screenshot-wait.js  tailwind.config.ts  test-detail-pages-simple.js  test-detail-pages.js  test-devtools-simple.js  test-devtools-ws.js  test-devtools.mjs  (+3 more)
(+714 files in other folders)
